# test_api

./: GRIDPILOT_PROJECT_BRIEF.md  data_frankfurt_carbon_intensity.json  data_frankfurt_grid_stress.json  data_frankfurt_power_price.json  data_gen.py  data_helsinki_carbon_intensity.json  data_helsinki_grid_stress.json  data_helsinki_power_price.json  data_madrid_carbon_intensity.json  data_madrid_grid_stress.json  data_madrid_power_price.json  database.py  gridpilot.db  gridpilot_historical_context.csv  index.html  ingestion.py  main.py  math_model.py  norway.json  pyproject.toml  requirements.txt  run_pipeline.py  server.py  solverdescription.md  switzerland.json  sybilion_forecast_results.json  sybilion_ready_data.json  ui_data.json
