[project]
name = "test-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "sybilion>=0.1.4",
    "uvicorn>=0.48.0",
    "yfinance>=1.4.1",
]
